[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Game/Decoracion/Life/Script/Life.gd" type="Script" id=1]
[ext_resource path="res://Assets/Game/Decoracion/Life/Sprites/Cuore8.png" type="Texture" id=2]
[ext_resource path="res://Assets/Game/Decoracion/Life/Sprites/Cuore6.png" type="Texture" id=3]
[ext_resource path="res://Assets/Game/Decoracion/Life/Sprites/Cuore7.png" type="Texture" id=4]
[ext_resource path="res://Assets/Game/Decoracion/Life/Sprites/Cuore1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Game/Decoracion/Life/Sprites/Cuore3.png" type="Texture" id=6]
[ext_resource path="res://Assets/Game/Decoracion/Life/Sprites/Cuore4.png" type="Texture" id=7]
[ext_resource path="res://Assets/Game/Decoracion/Life/Sprites/Cuore5.png" type="Texture" id=8]
[ext_resource path="res://Assets/Game/Decoracion/Life/Sprites/Cuore2.png" type="Texture" id=9]
[ext_resource path="res://Assets/Game/Decoracion/Life/Life.wav" type="AudioStream" id=10]

[sub_resource type="Animation" id=3]
resource_name = "Girar"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 5 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Recojer"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[node name="Life" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Girar = SubResource( 3 )
anims/RESET = SubResource( 4 )
anims/Recojer = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -8.0

[connection signal="body_entered" from="." to="." method="_on_Life_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
